--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Anukanksha's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   
-    <link rel="stylesheet" href="protfolio.css" />
+    <link rel="stylesheet" media="screen" href="protfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -112,7 +112,7 @@
               border: 1px solid black;
             }
           </style> -->
-          <table class="table table-success table-striped" style="display: flex; justify-content: center;align-items: center;">
+          <table class="table table-success table-striped table-responsive" style="display: flex; justify-content: center;align-items: center;">
             <tr>
               <th>&nbsp;&nbsp;Course</th>
               <th>&nbsp;&nbsp;University/Board</th>
@@ -155,7 +155,7 @@
           <img src="./images/head4.gif" alt="" height="25px;"width="25px;">&nbsp;Skills <img src="./images/head4.gif" alt="" height="25px;"width="25px;">
         </div>
 
-        <div class="subskills" style="display: flex; justify-content: center;align-items: stretch; flex-direction: column;">
+        <div class="subskills">
           <div class="front" style="display:flex ; flex-direction: row; align-items: center; justify-content: flex-start; padding-bottom: 6px;padding-right: 80px;" >
             <div style="flex:20%"></div>
           <div class="1" style="flex:20%"> <i class="fa-solid fa-circle-small"></i>&nbsp;&nbsp; ⚈ &nbsp;&nbsp;Frontend-development </div> 
@@ -209,7 +209,7 @@
         <div class="proj3"></div>
       </div>
       <div class="organisation">
-        <div class="org1" style="display: flex; justify-content: center;align-items: center;">  <img src="./images/head4.gif" alt="" height="25px;"width="25px;">&nbsp;Organisation <img src="./images/head4.gif" alt="" height="25px;"width="25px;"></div>
+        <div class="org1" >  <img src="./images/head4.gif" alt="" height="25px;"width="25px;">&nbsp;Organisation <img src="./images/head4.gif" alt="" height="25px;"width="25px;"></div>
         <div class="flex" >
             <div class="societyContainer">
             <div class="society">
@@ -238,7 +238,7 @@
             </div>
           </div>
          <div class="gif">
-          <img src="./images/icons8-mind-map.gif" height="160px" width="160px">
+          <img class="imggif" src="./images/icons8-mind-map.gif">
          </div>
          
     </div>
@@ -260,7 +260,7 @@
           <code>(pp:33-40) ,Royal Book Publishing, ISBN : 9789391131197</code>
          , My article tittled - A single tap and know the world with - Voice Assistant.
          <div style="display: flex; justify-content:center;align-items: center;cursor: pointer; padding-top: 20px">
-         <a href="https://drive.google.com/drive/folders/1MinHTmKliIK_Dufod75ERWHYn-E6MWRy?usp=sharing"><i class="fa-solid fa-link"></i></i></a>
+         <a href="https://drive.google.com/file/d/1ruUQeSo5FW2vAEQlykRydKrjMoSuTpYf/view?usp=sharing" target="_blank"><i class="fa-solid fa-link"></i></i></a>
         </div>
       </div>
       </div>
