made project responsive

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="detail" style="display: flex; justify-content: center;align-items: center;">
           <img src="./images/head4.gif" alt="" height="25px;"width="25px;">&nbsp;Education Detail <img src="./images/head4.gif" alt="" height="25px;"width="25px;">
         </div>
-        <div class="moreedu">
+        <div class="moreedu table-responsive">
           <!-- <style>
             table,
             th,
@@ -112,7 +112,7 @@
               border: 1px solid black;
             }
           </style> -->
-          <table class="table table-success table-striped table-responsive" style="display: flex; justify-content: center;align-items: center;">
+          <table class=" tableres table table-success table-striped " style="display: flex; justify-content: center;align-items: center;padding: 10px;">
             <tr>
               <th>&nbsp;&nbsp;Course</th>
               <th>&nbsp;&nbsp;University/Board</th>
